# qtest-actions

./: .gitignore  build-linux  build-windows  build-windows.bat  config.h  configure  configure.ac
.github/workflows/: apple-clang.yml  basic.yml  conditional.yml  disconnected.yml  docker-action.yml  docker-build.yml  ignore1.yml  ignore2.yml  locale.yml  main.yml  minimal.yml  nx-test.yml  path1.yml  path2.yml  pull-request.yml  slack-tag.yml  slack.yml
apple-clang/: CMakeLists.txt  a.cc  a.hh  build  main.cc
basic/: Makefile  README.md  autoconf.mk  autoconf.mk.in  autogen.sh  build-linux  build-windows  build-windows.bat  config.h.in  configure  configure.ac  test1.cc
basic/make/: libtool.mk  mingw.mk  msvc.mk
ci-tools/: slack-notify
docker-action/: Dockerfile  action.yml  entrypoint
docker-build/: Dockerfile  entrypoint
docker-build/windows/: Dockerfile  build
ignore/: a
locale/: a.cc  build-windows  build-windows.bat
no-ignore/: a
nx/: file
path1/: file
slack/: message.md
